<resources>
    <string name="app_name">Gitfit</string>

    <string name="image">image</string>
    <string name="main_page_start_button_text">Start</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="_30">30</string>
    <string name="_10">10</string>
    <string name="upcoming_exercise">Upcoming Exercise</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="finish_text">You have finished the workout!</string>
    <string name="finish">Finish</string>
    <string name="no">No</string>
    <string name="yes">YES</string>
    <string name="dialog_warning_text">This will stop the workout. You have come so far are you sure you want to quit?</string>
    <string name="dialog_warning_header">Are you sure?</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="your_bmi">Your BMI</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="calculate">Calculate</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="imperial_units">IMPERIAL UNITS</string>
    <string name="height_in_inches">HEIGHT (in inches)</string>
    <string name="height_in_feet">HEIGHT (in feet)</string>
    <string name="weight_in_ibs">WEIGHT (in Ibs)</string>
    <string name="history">History</string>
    <string name="exercise_completed">EXERCISES COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="weight_in_pounds" />
</resources>